--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Fashion and Art</title>
+  <title>Estúdio de Psicanálise, Arte e Cinema Talles Barrini</title>
   <link rel="icon" type="image/png" href="css/img/icon.png">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500"
     rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    <a class="navbar-brand" href="#">Modern Fashion and Art</a>
+    <a class="navbar-brand" href="#">Psychoanalysis, Art and Cinema</a>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
