--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Psychoanalysis <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#page16">Contact</a>
+          <a class="nav-link" href="#page16">Cinema</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.html">Dev</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#page3">Fashion</a>
         </li>
         <li class="nav-item">
@@ -47,7 +47,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#page11">Create</a>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Go beyond</a>
